<?xml version="1.0"?>
<package format="2">
  <name>h7_tof_safety_bridge_rqt</name>
  <version>0.1.0</version>
  <description>ROS1 rqt monitor and control panel for the H7 TOF safety bridge.</description>

  <maintainer email="seron@example.com">seron</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>h7_tof_safety_bridge</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <build_depend>std_srvs</build_depend>

  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>h7_tof_safety_bridge</exec_depend>
  <exec_depend>python_qt_binding</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
